--- a/noteplus_crx/pages/popup.html
+++ b/noteplus_crx/pages/popup.html
@@ -11,7 +11,7 @@
         }
         html,body{
             width: 600px;
-            min-height: 400px;
+            height: 400px;
         }
         body{
             padding: 10px;
@@ -28,9 +28,7 @@
     </style>
 </head>
 <body>
-    <div>
-        <app></app>
-    </div>
+    <app></app>
     <script type="text/javascript" src="../dist/index.js"></script>
 </body>
 </html>
